--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3471,7 +3471,7 @@ input, select, textarea {
 
 			#intro {
 				padding: 3rem 2rem 1rem 2rem ;
-				min-height: 80vh;
+				min-height: 50vh;
 			}
 
 				#intro h1 {
@@ -4384,7 +4384,7 @@ input, select, textarea {
 		}
 
 	#copyright {
-		color: #ffffff;
+		color: #ffffff!important;
 		position: relative;
 		color: rgba(255, 255, 255, 0.25);
 		cursor: default;
